--- a/src/client/app/components/header/header.component.scss
+++ b/src/client/app/components/header/header.component.scss
@@ -10,12 +10,16 @@
 	}
 
 	&__title {
-		font-size: 32px;
+		font-size: 22px;
 		text-decoration: none;
 		color: inherit;
 
 		h1 {
 			display: inline;
+		}
+
+		@include viewport-7 {
+			font-size: 32px;
 		}
 	}
 }
