:sparkles: today page

--- a/src/client/app/components/header/header.component.scss
+++ b/src/client/app/components/header/header.component.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/abstracts/mixins';
 
 .header {
-	color: #5f6c7b;
+	color: #3da9fc;
 	margin: 30px 0;
 	text-align: center;
 
@@ -19,7 +19,7 @@
 		}
 
 		@include viewport-7 {
-			font-size: 32px;
+			font-size: 28px;
 		}
 	}
 }
