--- a/src/client/app/pages/home/home.component.html
+++ b/src/client/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
 			>
 		</i>
 
-		<a routerLink="/food" class="home__cta-link">Try it out!</a>
+		<a routerLink="/today" class="home__cta-link">Try it out!</a>
 	</div>
 
 	<img
