--- a/src/client/app/components/calc/calc.component.scss
+++ b/src/client/app/components/calc/calc.component.scss
@@ -1,12 +1,15 @@
 @import '../../../styles/abstracts/mixins';
 
+:host {
+	width: 100%;
+}
+
 .calc {
 	display: flex;
 	justify-content: center;
 	font-size: 22px;
 	font-weight: bold;
 	color: #3da9fc;
-	width: 100%;
 	padding: 10px;
 	margin-top: 0;
 
