--- a/src/client/app/pages/today/today.component.scss
+++ b/src/client/app/pages/today/today.component.scss
@@ -7,6 +7,10 @@
 	height: 500px;
 	border-radius: 4px;
 
+	&__norec {
+		font-size: 18px;
+	}
+
 	&__add-meal {
 		border: none;
 		border-radius: 4px;
@@ -28,43 +32,4 @@
 	}
 }
 
-.meal {
-	width: 100%;
-	margin-bottom: 30px;
-	border: 2px solid #d8eefe;
 
-	&__top {
-		display: flex;
-		align-items: center;
-		width: 100%;
-		height: 50px;
-		background-color: #3da9fc;
-		border-radius: 4px 4px 0 0;
-	}
-
-	&__title {
-		font-size: 18px;
-		color: #fffffe;
-		padding: 10px;
-	}
-
-	&__food-list {
-		list-style: none;
-		padding: 10px;
-	}
-
-	&__food {
-		display: flex;
-		justify-content: space-between;
-	}
-
-	&__add-food {
-		border: none;
-		cursor: pointer;
-		width: 100%;
-		height: 35px;
-		background-color: #d8eefe;
-		color: #5f6c7b;
-		border-radius: 0 0 4px 4px;
-	}
-}
