--- a/src/client/app/components/meal/meal.component.scss
+++ b/src/client/app/components/meal/meal.component.scss
@@ -10,6 +10,7 @@
 
 	&__top {
 		display: flex;
+		justify-content: space-between;
 		align-items: center;
 		width: 100%;
 		height: 50px;
@@ -21,6 +22,13 @@
 		font-size: 18px;
 		color: #fffffe;
 		padding: 10px;
+	}
+
+	&__remove {
+		border: none;
+		background-color: transparent;
+		color: #fffffe;
+		cursor: pointer;
 	}
 
 	&__food-list {
